# combined_workspaces

./: README.md
catkin_ws/: cart_start.launch  gazebo_world.launch  gazebo_world_spawn.launch  offline_cartographer_3d_mapper.launch  ped_simulator_starter.launch  pioneer3at_3d.launch  robot_state_publisher.launch  spawn.launch  spawn_robot_launch_gazebo.launch
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/robot_controller/: CMakeLists.txt  package.xml
catkin_ws/src/robot_controller/scripts/: mapping_cicular_rotation.py  path_tracer.py
catkin_ws/src/robot_controller/src/: patrol_with_obstacle_avoidance.cpp  random_patrol_and_obstacle_avoidance.cpp  teleop_robot.cpp
